--- a/css/style.css
+++ b/css/style.css
@@ -241,8 +241,6 @@ textarea.field:focus {
 }
 
 .header-title-container {
-    height: 73vh;
-    max-width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -389,6 +387,7 @@ textarea.field:focus {
 }
 
 .trend-card {
+    width: 100%;
     border: 3px solid #b59f5b;
     padding: 33px 33px;
     background-color: rgba(0, 0, 0, 0);
@@ -463,15 +462,6 @@ textarea.field:focus {
 .post-content {
     margin-left: 33px;
 }
-
-
-/* .post-list {
-    display: flex;
-    flex-wrap: wrap;
-    list-style-type: none;
-    font-size: 14px;
-    font-weight: 700;
-} */
 
 .post-list-item:nth-child(n+1) {
     margin-right: 18px;
@@ -810,23 +800,23 @@ textarea.field:focus {
     position: relative;
 }
 
-.sale-price {
-    font-size: 20px;
-    line-height: 24px;
+.price {
     color: #0f0d0e;
     font-weight: 700;
+    line-height: 24px;
+}
+
+.sale-price {
+    font-size: 20px;
     margin-bottom: 4px;
 }
 
 .full-price {
-    position: absolute;
     left: 0;
     bottom: 25px;
     font-size: 14px;
-    line-height: 24px;
     text-decoration: line-through;
-    color: #0f0d0e;
-    font-weight: 700;
+    
 }
 
 .store-button {
@@ -841,6 +831,9 @@ textarea.field:focus {
     text-transform: uppercase;
     font-weight: 400;
     cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    padding: 15px 0 15px 0;
 }
 
 
@@ -964,7 +957,7 @@ textarea.field:focus {
       }
       
       .menu__btn {
-        display: flex;
+        display: none;
         align-items: center;
         position: fixed;
         top: 30px;
@@ -986,7 +979,7 @@ textarea.field:focus {
         width: 100%;
         height: 2px;
       
-        background-color: #ffffff;
+        background-color: #000000;
       
         transition-duration: .25s;
       }
@@ -1037,6 +1030,38 @@ textarea.field:focus {
       }
 }
 
+.full-nav {
+    width: 800px;
+    height: 30px;
+    text-align: center;
+}
+
+.nav {
+    display: flex;
+    padding-top: 60px;
+    margin: 0 auto;
+}
+
+.nav-item {
+    margin-right: 37px;
+    color: #fff;
+    list-style-type: none;
+}
+
+.nav-item:last-child {
+    margin-right: 0;
+}
+
+.nav-item-text {
+    font-size: 13px;
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+}
+
+.nav-item-text:hover {
+    color: rgb(230, 223, 223);
+}
 
 /* Column */
 
@@ -1044,8 +1069,10 @@ textarea.field:focus {
     .trend-card-container:nth-child(n+2) {
         margin-left: 4px;
     }
+    .nav-container {
+        display: none;
+    }
 }
-
 
 /* Tablet */
 
@@ -1056,6 +1083,9 @@ textarea.field:focus {
     .logo {
         width: 158px;
         margin-left: 0;
+    }
+    .full-nav {
+        display: none;
     }
     .header-content {
         background-image: url("../images/banner-bg-tablet.jpg");
@@ -1092,6 +1122,19 @@ textarea.field:focus {
     .main-section-title {
         font-size: 18px;
     }
+    .menu__btn {
+        display: flex;
+        align-items: center;
+        position: fixed;
+        top: 30px;
+        right: 50px;
+      
+        width: 26px;
+        height: 26px;
+      
+        cursor: pointer;
+        z-index: 1;
+      }
     .trend-title {
         font-size: 17px;
         line-height: 1.3;
@@ -1211,6 +1254,9 @@ textarea.field:focus {
     .feedback-form {
         padding: 27px 24px 32px;
     }
+    .full-nav {
+        display: none;
+    }
     .close-button {
         top: -32px;
     }
@@ -1255,6 +1301,19 @@ textarea.field:focus {
     .main-section-title {
         font-size: 16px;
     }
+    .menu__btn {
+        display: flex;
+        align-items: center;
+        position: fixed;
+        top: 50px;
+        right: 50px;
+      
+        width: 26px;
+        height: 26px;
+      
+        cursor: pointer;
+        z-index: 1;
+    }         
     .trends,
     .main-section,
     .post,
@@ -1294,7 +1353,7 @@ textarea.field:focus {
         width: 100%;
     }
     .post-img {
-        min-width: 0;
+        width: 100%;
     }
     .post-title {
         font-size: 16px;
@@ -1316,6 +1375,9 @@ textarea.field:focus {
     }
     .post:nth-child(n+2) {
         margin-top: 35px;
+    }
+    .post-text-block {
+        min-width: 0;
     }
     .side-menu {
         width: 100%;
@@ -1342,7 +1404,6 @@ textarea.field:focus {
         width: 100%;
         margin-top: -12px;
         padding-top: 25px;
-        max-width: 290px;
     }
     .store-card-title {
         font-size: 17px;
